--- a/ecom/apps/core/templates/base.html
+++ b/ecom/apps/core/templates/base.html
@@ -89,6 +89,8 @@
 
                 <div class="column is-4">
                     <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
+                </div>
+                <div class="column is-4">
                     <a href="{% url 'about' %}" class="navbar-item">About</a>
                 </div>
             </div>
